[gd_scene load_steps=3 format=3 uid="uid://bmpp80h4hoii4"]

[ext_resource type="Script" path="res://gd_lowl.gd" id="1_obsda"]
[ext_resource type="PackedScene" uid="uid://csvxfn3acdb4f" path="res://file_explorer/file_explorer.tscn" id="2_yscoe"]

[node name="ctr" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_obsda")

[node name="file_explorer" parent="." instance=ExtResource("2_yscoe")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="src_ctr" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="src_scroll" type="ScrollContainer" parent="src_ctr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="src_scroll_container" type="VBoxContainer" parent="src_ctr/src_scroll"]
layout_mode = 2
